# plutus-simple-model

./: .gitattributes  .gitignore  .hlint.yaml  404.html  CHANGELOG  LICENSE  Makefile  README.md  ROADMAP.md  box.html  cabal.project  check-balance.html  create-tx.html  default.nix  fake-coins.html  flake.nix  hie.yaml  index.html  install.html  intro.html  ledger-export.html  logs.html  plutus-simple-model.cabal  plutus-v2.html  print.html  query.html  quick-start.html  rewards.html  shell.nix  staking.html  test-scripts.html  time.html  typed-validator.html  unit-tests.html  use-tasty.html
.github/workflows/: gh-pages.yml  integrate.yaml
cardano-simple/: CHANGELOG  cardano-simple.cabal
cardano-simple/data/: alonzo-params.json
cardano-simple/src/Cardano/Simple/: Eval.hs  TxExtra.hs
cardano-simple/src/Cardano/Simple/Cardano/: Alonzo.hs  Babbage.hs  Class.hs  Common.hs
cardano-simple/src/Cardano/Simple/Ledger/: Scripts.hs  Slot.hs  TimeSlot.hs  Tx.hs
cardano-simple/src/Cardano/Simple/Plutus/Model/: Ada.hs
cardano-simple/src/Cardano/Simple/Plutus/Model/Mock/: FailReason.hs  Percent.hs
cardano-simple/src/Cardano/Simple/PlutusLedgerApi/V1/: Scripts.hs
cardano-simple/src/Plutus/Model/: Ada.hs
cardano-simple/src/Plutus/Model/Mock/: FailReason.hs  Percent.hs
data/: protocol-params.json
docs/: book.toml
docs/src/: create-tx.md  intro.md  plutus-v2.md  query.md  quick-start.md  staking.md  test-scripts.md  typed-validator.md  use-tasty.md
docs/src/logs/: log-debug.md
logs/: human-readable-names.html  log-debug.html  log-error.html  skip-logs.html
nix/: README.md  ci.nix  haskell.nix  sources.json  utils.nix
psm/: CHANGELOG  plutus-simple-model.cabal
psm/data/: babbage-params.json  protocol-params.json
psm/src/Plutus/: Model.hs
psm/src/Plutus/Model/: Ada.hs  Contract.hs  Mint.hs  Mock.hs  Pretty.hs  Stake.hs  Tx.hs  Validator.hs
psm/src/Plutus/Model/Mock/: Address.hs  FailReason.hs  Log.hs  MockConfig.hs  Percent.hs  ProtocolParameters.hs  Stat.hs
psm/src/Plutus/Model/Validator/: V1.hs  V2.hs
psm/src/Plutus/Model/Validator/V2/: Plutus.hs
psm/test/: Plutarch.hs  Spec.hs
psm/test/Suites/: Plutarch.hs
psm/test/Suites/Plutus/Model/: FakeCoin.hs  User.hs
psm/test/Suites/Plutus/Model/Script/: V1.hs  V2.hs
psm/test/Suites/Plutus/Model/Script/V1/Onchain/: Game.hs  Nft.hs  Safe.hs  Staking.hs
psm/test/Suites/Plutus/Model/Script/V1/Onchain/Counter/: Script.hs
psm/test/Suites/Plutus/Model/Script/V1/Onchain/Game/: Script.hs
psm/test/Suites/Plutus/Model/Script/V1/Onchain/Safe/: Script.hs
psm/test/Suites/Plutus/Model/Script/V1/Test/: Counter.hs  Nft.hs  Safe.hs  Staking.hs
psm/test/Suites/Plutus/Model/Script/V2/Onchain/: Game.hs  PMint.hs
psm/test/Suites/Plutus/Model/Script/V2/Onchain/Game/: Script.hs
psm/test/Suites/Plutus/Model/Script/V2/Onchain/Lend/: Script.hs
psm/test/Suites/Plutus/Model/Script/V2/Onchain/Oracle/: Hashed.hs  Inlined.hs
psm/test/Suites/Plutus/Model/Script/V2/Test/: Game.hs  GameRef.hs  PMint.hs
psm/test/Suites/Plutus/Model/Script/V2/Test/Oracle/: Hashed.hs  Inlined.hs
src/Plutus/: Model.hs
src/Plutus/Model/: Ada.hs  Blockchain.hs  Contract.hs  Mint.hs  Mock.hs  Pretty.hs  Stake.hs  Tx.hs  V1.hs  V2.hs  Validator.hs
src/Plutus/Model/Blockchain/: Address.hs  BchConfig.hs  Log.hs  ProtocolParameters.hs  Stat.hs
src/Plutus/Model/Fork/: TxExtra.hs
src/Plutus/Model/Fork/Cardano/: Alonzo.hs  Babbage.hs  Class.hs  Common.hs
src/Plutus/Model/Fork/Ledger/: Ada.hs  Scripts.hs  Slot.hs  TimeSlot.hs  Tx.hs
src/Plutus/Model/Fork/PlutusLedgerApi/V1/: Scripts.hs
src/Plutus/Model/Ledger/: Ada.hs  Scripts.hs
src/Plutus/Model/Mock/: Address.hs  FailReason.hs  Log.hs  MockConfig.hs  Percent.hs  ProtocolParameters.hs  Stat.hs
src/Plutus/Model/Validator/: V1.hs  V2.hs
src/Plutus/Model/Validator/V1/: Plutus.hs
src/Plutus/Model/Validator/V2/: Plutus.hs
src/Plutus/Test/: Model.hs
src/Plutus/Test/Model/: Blockchain.hs  Contract.hs  Mint.hs  Pretty.hs  Stake.hs  V1.hs  V2.hs  Validator.hs
src/Plutus/Test/Model/Blockchain/: Address.hs  BchConfig.hs  Log.hs  ProtocolParameters.hs  Stat.hs
src/Plutus/Test/Model/Fork/: CardanoAPI.hs  CardanoAPITemp.hs  TxExtra.hs
src/Plutus/Test/Model/Fork/Cardano/: Alonzo.hs  Babbage.hs  Class.hs  Common.hs
src/Plutus/Test/Model/Fork/Data/Aeson/: Extras.hs
src/Plutus/Test/Model/Fork/Ledger/: Ada.hs  Address.hs  Crypto.hs  Scripts.hs  Slot.hs  TimeSlot.hs  Tx.hs
src/Plutus/Test/Model/Fork/Ledger/Tx/: CardanoAPI.hs  CardanoAPITemp.hs
src/Plutus/Test/Model/Ledger/: Ada.hs  Scripts.hs
src/Plutus/Test/Model/Validator/: V1.hs  V2.hs
test/: Spec.hs
test/Suites/Plutus/Model/: FakeCoin.hs  Script.hs  User.hs  Util.hs
test/Suites/Plutus/Model/Script/: V1.hs  V2.hs
test/Suites/Plutus/Model/Script/Onchain/: Counter.hs  Game.hs  Nft.hs  Safe.hs  Staking.hs  Util.hs
test/Suites/Plutus/Model/Script/Onchain/Counter/: Script.hs
test/Suites/Plutus/Model/Script/Onchain/Game/: Script.hs
test/Suites/Plutus/Model/Script/Onchain/Safe/: Script.hs
test/Suites/Plutus/Model/Script/Test/: Counter.hs  Game.hs  Nft.hs  Safe.hs  Staking.hs
test/Suites/Plutus/Model/Script/V1/Onchain/: Counter.hs  Game.hs  Nft.hs  Safe.hs  Staking.hs  Util.hs
test/Suites/Plutus/Model/Script/V1/Onchain/Counter/: Script.hs
test/Suites/Plutus/Model/Script/V1/Onchain/Game/: Script.hs
test/Suites/Plutus/Model/Script/V1/Onchain/Safe/: Script.hs
test/Suites/Plutus/Model/Script/V1/Test/: Counter.hs  Game.hs  Nft.hs  Safe.hs  Staking.hs
test/Suites/Plutus/Model/Script/V2/Onchain/: Game.hs  Lend.hs  Oracle.hs  Util.hs
test/Suites/Plutus/Model/Script/V2/Onchain/Game/: Script.hs
test/Suites/Plutus/Model/Script/V2/Onchain/Lend/: Script.hs
test/Suites/Plutus/Model/Script/V2/Onchain/Oracle/: Hashed.hs  Inlined.hs  Script.hs
test/Suites/Plutus/Model/Script/V2/Test/: Game.hs  GameRef.hs  Lend.hs  Oracle.hs
test/Suites/Plutus/Model/Script/V2/Test/Oracle/: Hashed.hs  Inlined.hs
unit-tests/: check-budget.html  custom-fail.html  negative.html
