cabal-version:      3.0
name:               plutus-simple-model
version:            0.2.0.0
synopsis:           Unit test library for plutus
description:        Unit test library for plutus with resource estimation
homepage:           https://github.com/mlabs-haskell/plutus-simple-model
bug-reports:        https://github.com/mlabs-haskell/plutus-simple-model
license:
license-file:
author:             Anton Kholomiov, Borja Bonet Segui, MLabs
maintainer:         <anton@mlabs.city>
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==8.10.4
extra-source-files: README.md
data-files:
  data/protocol-params.json
  data/alonzo-params.json

common lang
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fobject-code -fno-strictness
    -fno-specialise -ddump-simpl -ddump-to-file -dsuppress-idinfo
    -dsuppress-coercions -dsuppress-type-applications
    -dsuppress-uniques -dsuppress-module-prefixes
common deps
  build-depends:
    , base                     ^>=4.14
    , aeson
    , array
    , base16-bytestring
    , base58-bytestring
    , bytestring
    , data-default
    , hashable
    , http-api-data
    , cardano-api
    , cardano-binary
    , cardano-crypto
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , cardano-ledger-babbage
    , cardano-slotting
    , cborg
    , cryptonite
    , containers
    , memory
    , mtl
    , newtype-generics
    , serialise
    , prettyprinter
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , strict-containers
    , vector
    , tagged
    , time
    , text
    , deepseq

common test-deps
  import:        deps
  build-depends:
    , tasty
    , tasty-hunit
    -- , tasty-expected-failure

library
  import:           lang
  import:           deps
  exposed-modules:
    Plutus.Test.Model
    Plutus.Test.Model.Blockchain
    Plutus.Test.Model.Blockchain.ProtocolParameters
    Plutus.Test.Model.Contract
    Plutus.Test.Model.Mint
    Plutus.Test.Model.Pretty
    Plutus.Test.Model.Stake
    Plutus.Test.Model.Validator
    Plutus.Test.Model.Ledger.Ada
    Plutus.Test.Model.Ledger.Scripts
  other-modules:
    Plutus.Test.Model.Fork.Data.Aeson.Extras
    Plutus.Test.Model.Fork.CardanoAPI
    Plutus.Test.Model.Fork.Ledger.Address
    Plutus.Test.Model.Fork.Ledger.Crypto
    Plutus.Test.Model.Fork.Ledger.Slot
    Plutus.Test.Model.Fork.Ledger.Tx
    Plutus.Test.Model.Fork.Ledger.TimeSlot
    Plutus.Test.Model.Fork.Ledger.Ada
    Plutus.Test.Model.Fork.Ledger.Scripts
    Plutus.Test.Model.Fork.Ledger.Tx.CardanoAPI
    Plutus.Test.Model.Fork.Ledger.Tx.CardanoAPITemp
    Plutus.Test.Model.Fork.TxExtra
  build-depends:    tasty
                  , tasty-hunit
  other-modules:
    Paths_plutus_simple_model
  hs-source-dirs:   src

test-suite plutus-simple-model-test
  import:           lang
  import:           deps
  import:           test-deps
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Suites.Plutus.Model.FakeCoin
    Suites.Plutus.Model.Script
    Suites.Plutus.Model.Script.Onchain.Counter
    Suites.Plutus.Model.Script.Onchain.Counter.Script
    Suites.Plutus.Model.Script.Onchain.Game
    Suites.Plutus.Model.Script.Onchain.Game.Script
    Suites.Plutus.Model.Script.Onchain.Nft
    Suites.Plutus.Model.Script.Onchain.Safe
    Suites.Plutus.Model.Script.Onchain.Safe.Script
    Suites.Plutus.Model.Script.Onchain.Staking
    Suites.Plutus.Model.Script.Onchain.Util
    Suites.Plutus.Model.Script.Test.Counter
    Suites.Plutus.Model.Script.Test.Game
    Suites.Plutus.Model.Script.Test.Nft
    Suites.Plutus.Model.Script.Test.Safe
    Suites.Plutus.Model.Script.Test.Staking
    Suites.Plutus.Model.User
    Suites.Plutus.Model.Util
  build-depends:    plutus-simple-model
  hs-source-dirs:   test
