cabal-version:      3.0
name:               plutus-simple-model
version:            0.2.0.0
synopsis:           Unit test library for plutus
description:        Unit test library for plutus with resource estimation
homepage:           https://github.com/mlabs-haskell/plutus-simple-model
bug-reports:        https://github.com/mlabs-haskell/plutus-simple-model
license:
license-file:
author:             Anton Kholomiov, Borja Bonet Segui, MLabs
maintainer:         <anton@mlabs.city>
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==8.10.4
extra-source-files:
  README.md
  data/protocol-params.json
  data/alonzo-params.json

common lang
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fobject-code -fno-strictness
    -fno-specialise -ddump-simpl -ddump-to-file -dsuppress-idinfo
    -dsuppress-coercions -dsuppress-type-applications
    -dsuppress-uniques -dsuppress-module-prefixes
common deps
  build-depends:
    , base                     ^>=4.14
    , aeson
    , array
    , base16-bytestring
    , base58-bytestring
    , bytestring
    , data-default
    , hashable
    , http-api-data
    , cardano-binary
    , cardano-crypto
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , cardano-ledger-babbage
    , cardano-slotting
    , cborg
    , cryptonite
    , containers
    , memory
    , mtl
    , serialise
    , prettyprinter
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , strict-containers
    , vector
    , tagged
    , time
    , text
    , deepseq

common test-deps
  import:        deps
  build-depends:
    , tasty
    , tasty-hunit
    -- , tasty-expected-failure

library
  import:           lang
  import:           deps
  exposed-modules:
    Plutus.Model
    Plutus.Model.V1
    Plutus.Model.V2
    Plutus.Model.Blockchain
    Plutus.Model.Blockchain.Address
    Plutus.Model.Blockchain.BchConfig
    Plutus.Model.Blockchain.Log
    Plutus.Model.Blockchain.ProtocolParameters
    Plutus.Model.Blockchain.Stat
    Plutus.Model.Contract
    Plutus.Model.Mint
    Plutus.Model.Pretty
    Plutus.Model.Stake
    Plutus.Model.Validator
    Plutus.Model.Validator.V1
    Plutus.Model.Validator.V2
    Plutus.Model.Ledger.Ada
    Plutus.Model.Ledger.Scripts
  other-modules:
    Plutus.Model.Fork.Cardano.Alonzo
    Plutus.Model.Fork.Cardano.Babbage
    Plutus.Model.Fork.Cardano.Class
    Plutus.Model.Fork.Cardano.Common
    Plutus.Model.Fork.Ledger.Ada
    Plutus.Model.Fork.Ledger.Scripts
    Plutus.Model.Fork.Ledger.Slot
    Plutus.Model.Fork.Ledger.TimeSlot
    Plutus.Model.Fork.Ledger.Tx
    Plutus.Model.Fork.TxExtra
  build-depends:    tasty
                  , tasty-hunit
  other-modules:
    Paths_plutus_simple_model
  hs-source-dirs:   src

test-suite plutus-simple-model-test
  import:           lang
  import:           deps
  import:           test-deps
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Suites.Plutus.Model.FakeCoin
    Suites.Plutus.Model.Script.V1
    Suites.Plutus.Model.Script.V1.Onchain.Counter
    Suites.Plutus.Model.Script.V1.Onchain.Counter.Script
    Suites.Plutus.Model.Script.V1.Onchain.Game
    Suites.Plutus.Model.Script.V1.Onchain.Game.Script
    Suites.Plutus.Model.Script.V1.Onchain.Nft
    Suites.Plutus.Model.Script.V1.Onchain.Safe
    Suites.Plutus.Model.Script.V1.Onchain.Safe.Script
    Suites.Plutus.Model.Script.V1.Onchain.Staking
    Suites.Plutus.Model.Script.V1.Onchain.Util
    Suites.Plutus.Model.Script.V1.Test.Counter
    Suites.Plutus.Model.Script.V1.Test.Game
    Suites.Plutus.Model.Script.V1.Test.Nft
    Suites.Plutus.Model.Script.V1.Test.Safe
    Suites.Plutus.Model.Script.V1.Test.Staking
    Suites.Plutus.Model.Script.V2
    Suites.Plutus.Model.Script.V2.Onchain.Game.Script
    Suites.Plutus.Model.Script.V2.Onchain.Game
    Suites.Plutus.Model.Script.V2.Onchain.Lend.Script
    Suites.Plutus.Model.Script.V2.Onchain.Lend
    Suites.Plutus.Model.Script.V2.Onchain.Oracle
    Suites.Plutus.Model.Script.V2.Onchain.Oracle.Hashed
    Suites.Plutus.Model.Script.V2.Onchain.Oracle.Inlined
    Suites.Plutus.Model.Script.V2.Test.Game
    Suites.Plutus.Model.Script.V2.Test.GameRef
    Suites.Plutus.Model.Script.V2.Test.Lend
    Suites.Plutus.Model.Script.V2.Test.Oracle.Hashed
    Suites.Plutus.Model.Script.V2.Test.Oracle.Inlined
    Suites.Plutus.Model.Script.V2.Onchain.Util
    Suites.Plutus.Model.User
    Suites.Plutus.Model.Util
  build-depends:    plutus-simple-model
  hs-source-dirs:   test
