cabal-version:      3.0
name:               cardano-simple
version:            0.0.1
synopsis:           Lightweight wrapper layer of some Cardano functions
description:        Lightweight wrapper layer of some Cardano functions
homepage:           https://github.com/mlabs-haskell/plutus-simple-model
bug-reports:        https://github.com/mlabs-haskell/plutus-simple-model
license:
license-file:
author:             Anton Kholomiov, Borja Bonet Segui, MLabs
maintainer:         <anton@mlabs.city>
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==9.2.4
extra-source-files:
  data/alonzo-params.json
  data/protocol-params.json

common lang
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wredundant-constraints -Wmissing-export-lists
    -Werror -Wincomplete-record-updates -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fobject-code -fno-specialise

common deps
  build-depends:
    , aeson
    , array
    , base
    , base16-bytestring
    , base58-bytestring
    , bytestring
    , cardano-binary
    , cardano-crypto
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , cardano-slotting
    , cardano-strict-containers
    , cborg
    , containers
    , cryptonite
    , data-default
    , deepseq
    , flat
    , hashable
    , http-api-data
    , memory
    , mtl
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter
    , serialise
    , tagged
    , text
    , time
    , vector

library
  import:          lang
  import:          deps
  exposed-modules:
    Cardano.Simple.Cardano.Alonzo
    Cardano.Simple.Cardano.Babbage
    Cardano.Simple.Cardano.Class
    Cardano.Simple.Cardano.Common
    Cardano.Simple.Eval
    Cardano.Simple.Ledger.Scripts
    Cardano.Simple.Ledger.Slot
    Cardano.Simple.Ledger.TimeSlot
    Cardano.Simple.Ledger.Tx
    Cardano.Simple.Plutus.Model.Ada
    Cardano.Simple.Plutus.Model.Mock.FailReason
    Cardano.Simple.Plutus.Model.Mock.Percent
    Cardano.Simple.PlutusLedgerApi.V1.Scripts
    Cardano.Simple.TxExtra

  build-depends:
    , tasty
    , tasty-hunit

  other-modules:   Paths_cardano_simple
  hs-source-dirs:  src
