cabal-version:      3.0
name:               plutus-simple-model
version:            0.6.0.0
synopsis:           Unit test library for plutus
description:        Unit test library for plutus with resource estimation
homepage:           https://github.com/mlabs-haskell/plutus-simple-model
bug-reports:        https://github.com/mlabs-haskell/plutus-simple-model
license:
license-file:
author:             Anton Kholomiov, Borja Bonet Segui, MLabs
maintainer:         <anton@mlabs.city>
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==9.2.4
extra-source-files:
  data/alonzo-params.json
  data/protocol-params.json
  README.md

common lang
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wredundant-constraints -Wmissing-export-lists
    -Werror -Wincomplete-record-updates -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fobject-code -fno-specialise

common deps
  build-depends:
    , aeson
    , array
    , base
    , base16-bytestring
    , base58-bytestring
    , bytestring
    , cardano-binary
    , cardano-crypto
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , cardano-slotting
    , cardano-strict-containers
    , cborg
    , containers
    , cryptonite
    , data-default
    , deepseq
    , flat
    , hashable
    , http-api-data
    , memory
    , mtl
    , plutarch
    , plutarch-extra
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter
    , serialise
    , tagged
    , text
    , time
    , vector

common test-deps
  import:        deps
  build-depends:
    , tasty
    , tasty-hunit

-- , tasty-expected-failure

library
  import:          lang
  import:          deps
  exposed-modules:
    Plutus.Model
    Plutus.Model.Ada
    Plutus.Model.Contract
    Plutus.Model.Mint
    Plutus.Model.Mock
    Plutus.Model.Mock.Address
    Plutus.Model.Mock.FailReason
    Plutus.Model.Mock.Log
    Plutus.Model.Mock.MockConfig
    Plutus.Model.Mock.Percent
    Plutus.Model.Mock.ProtocolParameters
    Plutus.Model.Mock.Stat
    Plutus.Model.Pretty
    Plutus.Model.Stake
    Plutus.Model.V1
    Plutus.Model.V2
    Plutus.Model.Validator
    Plutus.Model.Validator.V1
    Plutus.Model.Validator.V1.Plutus
    Plutus.Model.Validator.V2
    Plutus.Model.Validator.V2.Plutus

  build-depends:
    , cardano-simple
    , tasty
    , tasty-hunit

  other-modules:   Paths_plutus_simple_model
  hs-source-dirs:  src

test-suite plutus-simple-model-test
  import:         lang
  import:         deps
  import:         test-deps
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    Suites.Plutarch
    Suites.Plutus.Model.FakeCoin
    Suites.Plutus.Model.Script.V1
    Suites.Plutus.Model.Script.V1.Onchain.Counter
    Suites.Plutus.Model.Script.V1.Onchain.Counter.Script
    Suites.Plutus.Model.Script.V1.Onchain.Game
    Suites.Plutus.Model.Script.V1.Onchain.Game.Script
    Suites.Plutus.Model.Script.V1.Onchain.Nft
    Suites.Plutus.Model.Script.V1.Onchain.Safe
    Suites.Plutus.Model.Script.V1.Onchain.Safe.Script
    Suites.Plutus.Model.Script.V1.Onchain.Staking
    Suites.Plutus.Model.Script.V1.Test.Counter
    Suites.Plutus.Model.Script.V1.Test.Game
    Suites.Plutus.Model.Script.V1.Test.Nft
    Suites.Plutus.Model.Script.V1.Test.Safe
    Suites.Plutus.Model.Script.V1.Test.Staking
    Suites.Plutus.Model.Script.V2
    Suites.Plutus.Model.Script.V2.Onchain.Game
    Suites.Plutus.Model.Script.V2.Onchain.Game.Script
    Suites.Plutus.Model.Script.V2.Onchain.Lend
    Suites.Plutus.Model.Script.V2.Onchain.Lend.Script
    Suites.Plutus.Model.Script.V2.Onchain.Oracle
    Suites.Plutus.Model.Script.V2.Onchain.Oracle.Hashed
    Suites.Plutus.Model.Script.V2.Onchain.Oracle.Inlined
    Suites.Plutus.Model.Script.V2.Test.Game
    Suites.Plutus.Model.Script.V2.Test.GameRef
    Suites.Plutus.Model.Script.V2.Test.Lend
    Suites.Plutus.Model.Script.V2.Test.Oracle.Hashed
    Suites.Plutus.Model.Script.V2.Test.Oracle.Inlined
    Suites.Plutus.Model.User
    Suites.Plutus.Model.Util

  build-depends:
    , plutus-simple-model
    , plutus-tx-plugin

  hs-source-dirs: test
